<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="F_GetKL306xState" Id="{fed3897d-ed45-462c-815a-c32436a369f0}" SpecialFunc="None">
    <Declaration><![CDATA[// Some of the bits are 
FUNCTION F_GetKL306xState
VAR_INPUT
   KL306xState : stKL306x_ChannelStatus;
END_VAR
VAR_OUTPUT
   Underrange : BOOL;
   Overrange : BOOL;
   ProcessData_EQ_Limit1 : BOOL;
   ProcessData_GT_Limit1 : BOOL;
   ProcessData_LT_Limit1 : BOOL;
   Limit1NotEnabled : BOOL;
   ProcessData_EQ_Limit2 : BOOL;
   ProcessData_GT_Limit2 : BOOL;
   ProcessData_LT_Limit2 : BOOL;
   Limit2NotEnabled : BOOL;
   Error : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Underrange := KL306xState.Underrange;
Overrange := KL306xState.Overrange;

ProcessData_EQ_Limit1 := KL306xState.Limit1Bit_1 AND KL306xState.Limit1Bit_0;
ProcessData_GT_Limit1 := KL306xState.Limit1Bit_1 AND NOT KL306xState.Limit1Bit_0;
ProcessData_LT_Limit1 := NOT KL306xState.Limit1Bit_1 AND KL306xState.Limit1Bit_0;
Limit1NotEnabled := NOT KL306xState.Limit1Bit_1 AND NOT KL306xState.Limit1Bit_0;

ProcessData_EQ_Limit2 := KL306xState.Limit2Bit_1 AND KL306xState.Limit2Bit_0;
ProcessData_GT_Limit2 := KL306xState.Limit2Bit_1 AND NOT KL306xState.Limit2Bit_0;
ProcessData_LT_Limit2 := NOT KL306xState.Limit2Bit_1 AND KL306xState.Limit2Bit_0;
Limit2NotEnabled := NOT KL306xState.Limit2Bit_1 AND NOT KL306xState.Limit2Bit_0;

Error := KL306xState.Error;]]></ST>
    </Implementation>
    <LineIds Name="F_GetKL306xState">
      <LineId Id="138" Count="12" />
      <LineId Id="37" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>